# ncursesSnakeGame

./: CMakeLists.txt  README.md  main.cpp
include/: board.hpp  game.hpp  scoreboard.hpp  snake.hpp  symbol.hpp
src/: board.cpp  game.cpp  scoreboard.cpp  snake.cpp  symbol.cpp
